--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile project(':zoomimageviewlibrary')
+    //compile project(':zoomimageviewlibrary')
+    compile 'com.github.andy6804tw:ZoomImageView-lib:0.0.1'
     testCompile 'junit:junit:4.12'
 }
